# RedEngine

./: .gitignore  README.md  all.sln
RedEngineGraphics/: .cpp  CMakeLists.txt  Game.h  RedEngineGraphics.sln  RedEngineGraphics.vcxproj  RedEngineGraphics.vcxproj.filters
RedEngineGraphics/Debug/: RedLib.idb  vc142.idb
RedEngineGraphics/Debug/RedEngin.bbfafb32.tlog/: CL.read.1.tlog  (+3 more)
RedEngineGraphics/Fragment Shaders/: basic.frag  chickenColor.frag  color.frag  colorTextured.frag  skybox.frag  test.frag  text.frag  textured.frag  texturedBounded.frag  triColor.frag
RedEngineGraphics/Header Files/: Animation.h  AnimationData.h  AnimationManager.h  Cursor.h  DebugHUD.h  Font.h  FontManager.h  Game.h  GameObject2D.h  GameObject2DManager.h  GameObject3D.h  GameObject3DManager.h  GraphicsSystem.h  Mesh2D.h  Mesh3D.h  MeshType.h  Shader.h  ShaderManager.h  ShaderProgram.h  Sprite.h  SpriteManager.h  Texture2D.h  Texture2DManager.h  UIElement.h  UIManager.h  UIScrollElement.h
RedEngineGraphics/Source Files/: Animation.cpp  AnimationData.cpp  AnimationManager.cpp  Cursor.cpp  DebugHUD.cpp  Font.cpp  FontManager.cpp  Game.cpp  GameObject2D.cpp  GameObject2DManager.cpp  GameObject3D.cpp  GameObject3DManager.cpp  GraphicsSystem.cpp  Mesh2D.cpp  Mesh3D.cpp  Shader.cpp  ShaderManager.cpp  ShaderProgram.cpp  Sprite.cpp  SpriteManager.cpp  Texture2D.cpp  Texture2DManager.cpp  UIElement.cpp  UIManager.cpp  UIScrollElement.cpp  main.cpp
RedEngineGraphics/Vertex Shaders/: basic.vert  basic3D.vert  basicUI.vert  skybox.vert  test.vert  text.vert  textured.vert  texturedBounded.vert
(+308 files in other folders)
